rasn-compiler-tests/tests/snapshots/simple_types__octet_string.snap
---
source: rasn-compiler-tests/tests/simple_types.rs
description: " Test-Octets ::= OCTET STRING\n        test-octets-val Test-Octets ::= '10101010'B"
---
Generated:
# [allow (non_camel_case_types , non_snake_case , non_upper_case_globals , unused , clippy :: too_many_arguments ,)] pub mod test_module { extern crate alloc ; use core :: borrow :: Borrow ; use std :: sync :: LazyLock ; use rasn :: prelude :: * ; # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (delegate , identifier = "Test-Octets")] pub struct TestOctets (pub OctetString) ; pub static TEST_OCTETS_VAL : LazyLock < TestOctets > = LazyLock :: new (|| TestOctets (< OctetString as From < & 'static [u8] >> :: from (& [170]))) ; }
