rasn-compiler-tests/tests/snapshots/simple_types__octet_string_value.snap
---
source: rasn-compiler-tests/tests/simple_types.rs
description: "test-bytes OCTET STRING ::= 'FF'H"
---
Generated:
# [allow (non_camel_case_types , non_snake_case , non_upper_case_globals , unused , clippy :: too_many_arguments ,)] pub mod test_module { extern crate alloc ; use core :: borrow :: Borrow ; use std :: sync :: LazyLock ; use rasn :: prelude :: * ; pub static TEST_BYTES : LazyLock < OctetString > = LazyLock :: new (|| < OctetString as From < & 'static [u8] >> :: from (& [255])) ; }
